test/expected/explain_const_cast_pi-c.out
explain const_cast<int*>(x)
        ^
9: error: "const_cast": unsupported keyword in C
